wip fixing splittext, gsap and vue-observe-visibility changing gsap animation

--- a/assets/scss/modules/_about.scss
+++ b/assets/scss/modules/_about.scss
@@ -109,10 +109,6 @@ $about-h2-font-size-max: 5.45rem;
       font-size: 1rem;
       line-height: 1.6;
       margin-bottom: 1rem;
-
-      [class^="char"] {
-        display: inline;
-      }
     }
 
     @include media(">=tablet") {
